syntax = "proto3";
option go_package = "learn/x/grpc/helloworld";
package testrpc.helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloKeyMap(HelloRequest) returns (KeyValueMap);
}

message HelloRequest {
  string who = 1;
  int32 your_age =2;
}

message HelloReply {
  string name  = 1;
  int32 age  = 2;
}
message KeyValueMap {
  repeated HelloReply my_map = 1;
}
