syntax = "proto3";
option go_package = "learn/x/grpc/helloworldgw/";
package testrpc.helloworldgw;
import "x/grpc/helloworld/helloworld.proto";
import "google/api/annotations.proto";
service GreeterGW {
  //这里定义接口函数
  rpc SayHelloGWJSon (helloworld.HelloRequest) returns (HelloReplyGW){
    option (google.api.http) = {
      post : "/api/sayHello"
      body : "*"
    };
  }
  rpc SayHelloGWGet (HelloGetRequestGW) returns (HelloGetReplyGW){
    option (google.api.http) = {
      //路径后面不需要加/，否则会报错
      get : "/api/sayHelloGet"  
      additional_bindings {
          get : "/api/sayHelloGet/{id}"
      }
    };
  }
}

message HelloReplyGW {
  string my_name  = 1;
  int32 age  = 2;
}

message HelloGetRequestGW {
  int32 id  = 2;
}
message HelloGetReplyGW {
  string msg  = 1;
}